# stageleft

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
stageleft/: Cargo.toml
stageleft/src/: attempt_transform_macro.rs  lib.rs  properties.rs  rewrite_paths.rs  runtime_support.rs  type_name.rs
stageleft/tests/: compile_fail.rs
stageleft/tests/compile-fail/: closure_capture_lifetime.rs  closure_capture_lifetime.stderr  export_not_pub.rs  export_not_pub.stderr  unresolved_identifier.rs  unresolved_identifier.stderr
stageleft_macro/: Cargo.toml
stageleft_macro/src/: lib.rs
stageleft_macro/src/quote_impl/: attempt_transform_macro.rs  mod.rs
stageleft_macro/src/quote_impl/free_variable/: mod.rs
stageleft_macro/src/quote_impl/snapshots/: capture_copy_local@macro_tokens.snap  capture_copy_local@macro_tokens.snap.new  capture_copy_local_block@macro_tokens.snap  capture_copy_local_block@macro_tokens.snap.new  capture_copy_local_block_let@macro_tokens.snap  capture_copy_local_block_let@macro_tokens.snap.new  capture_in_macro@macro_tokens.snap  capture_in_macro@macro_tokens.snap.new  capture_local@macro_tokens.snap  capture_local@macro_tokens.snap.new  capture_local_mut@macro_tokens.snap  capture_local_mut@macro_tokens.snap.new  let_else_structural_binding@macro_tokens.snap  non_capture_enum_creation@macro_tokens.snap  non_capture_enum_creation@macro_tokens.snap.new  non_capture_local@macro_tokens.snap  non_capture_local@macro_tokens.snap.new  non_capture_struct_creation@macro_tokens.snap  non_capture_struct_creation@macro_tokens.snap.new  prelude_enum_variants@macro_tokens-2.snap  prelude_enum_variants@macro_tokens-3.snap  prelude_enum_variants@macro_tokens-4.snap  prelude_enum_variants@macro_tokens.snap  prelude_enum_variants@macro_tokens.snap.new  simple@macro_tokens.snap  simple@macro_tokens.snap.new  stageleft_macro__quote_impl__tests__capture_copy_local@macro_tokens.snap  stageleft_macro__quote_impl__tests__capture_copy_local_block@macro_tokens.snap  stageleft_macro__quote_impl__tests__capture_copy_local_block_let@macro_tokens.snap  stageleft_macro__quote_impl__tests__capture_in_macro@macro_tokens.snap  stageleft_macro__quote_impl__tests__capture_local@macro_tokens.snap  stageleft_macro__quote_impl__tests__capture_local_mut@macro_tokens.snap  stageleft_macro__quote_impl__tests__non_capture_enum_creation@macro_tokens.snap  stageleft_macro__quote_impl__tests__non_capture_local@macro_tokens.snap  stageleft_macro__quote_impl__tests__non_capture_struct_creation@macro_tokens.snap  stageleft_macro__quote_impl__tests__prelude_enum_variants@macro_tokens-2.snap  stageleft_macro__quote_impl__tests__prelude_enum_variants@macro_tokens-3.snap  stageleft_macro__quote_impl__tests__prelude_enum_variants@macro_tokens-4.snap  stageleft_macro__quote_impl__tests__prelude_enum_variants@macro_tokens.snap  stageleft_macro__quote_impl__tests__simple@macro_tokens.snap  (+4 more)
stageleft_test/: Cargo.toml
stageleft_test/src/: backtrace_test.rs  lib.rs  property_example.rs  submodule.rs
stageleft_test/src/snapshots/: stageleft_test__tests__crate_path_in_macro.snap  stageleft_test__tests__splice_snapshot_crate_path.snap  stageleft_test__tests__splice_snapshot_fnmut2_borrow_mut.snap  stageleft_test__tests__splice_snapshot_free_var.snap  stageleft_test__tests__splice_snapshot_simple.snap  stageleft_test__tests__use_crate_path_in_test_module.snap
stageleft_test_downstream/: Cargo.toml
stageleft_test_downstream/src/: lib.rs
stageleft_test_macro/: Cargo.toml
stageleft_test_no_entry/: Cargo.toml  build.rs
stageleft_test_no_entry/src/: lib.rs
stageleft_test_no_entry/tests/: codegen_snapshot.rs
stageleft_test_no_entry/tests/snapshots/: codegen_snapshot__lib_pub.snap  codegen_snapshot__staged_deps.snap
stageleft_tool/: Cargo.toml
stageleft_tool/src/: lib.rs
