[workspace]
members = [
    "stageleft",
    "stageleft_macro",
    "stageleft_test",
    "stageleft_test_macro",
    "stageleft_test_downstream",
    "stageleft_tool",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hydro-project/stageleft"
