[package]
name = "stageleft"
publish = true
version = "0.10.3"
documentation = "https://docs.rs/stageleft/"
description = "Type-safe staged programming for Rust"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
quote = "1"
syn = { version = "2", features = [ "full", "visit-mut" ] }
proc-macro2 = "1"
proc-macro-crate = "3.3"
stageleft_macro = { path = "../stageleft_macro", version = "^0.10.3" }
ctor = "0.4.1"

[dev-dependencies]
trybuild = "1"
