[package]
name = "stageleft_macro"
publish = true
version = "0.10.0"
documentation = "https://docs.rs/stageleft_macro/"
description = "Helper macros for the stageleft crate"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1"
syn = { version = "2", features = [ "full", "visit-mut", "extra-traits" ] }
proc-macro2 = "1"
proc-macro-crate = "3.3"
sha2 = "0.10.0"

[dev-dependencies]
insta = "1.39"
prettyplease = { version = "0.2.0", features = ["verbatim"] }
