[package]
name = "stageleft_test"
publish = false
version = "0.0.0"
edition = "2024"

[features]
stageleft_devel = []
test_feature = []

[dependencies]
stageleft = { path = "../stageleft", version = "^0.6.0" }
stageleft_test_macro = { path = "../stageleft_test_macro" }

rand = { version = "0.9.0", features = ["thread_rng"] }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.5.0" }
