[package]
name = "stageleft_test"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[package.metadata.release]
release = false

[features]
default = ["stageleft_macro_entrypoint"]
stageleft_macro_entrypoint = []
test_feature = []
once_cell_feature = ["dep:once_cell", "stageleft_test_macro/once_cell_feature"]

[dependencies]
stageleft = { path = "../stageleft", version = "^0.13.4" }
stageleft_test_macro = { path = "../stageleft_test_macro" }

rand_alias = { package = "rand", version = "0.9.0", features = ["thread_rng"] }

once_cell = { version = "1.20", optional = true }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.13.4" }
