[package]
name = "stageleft_test_macro"
publish = false
version = "0.0.0"
edition = "2024"

[package.metadata.release]
release = false

[features]
test_feature = []

[lib]
proc-macro = true
path = "../stageleft_test/src/lib.rs"

[dependencies]
stageleft = { path = "../stageleft", version = "^0.9.6" }

rand_alias = { package = "rand", version = "0.9.0", features = ["thread_rng"] }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.9.6" }
