[package]
name = "stageleft_test_macro"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[package.metadata.release]
release = false

[features]
test_feature = []
once_cell_feature = ["dep:once_cell"]

[lib]
proc-macro = true
path = "../stageleft_test/src/lib.rs"

[dependencies]
stageleft = { path = "../stageleft", version = "^0.13.4" }

rand_alias = { package = "rand", version = "0.9.0", features = ["thread_rng"] }

once_cell = { version = "1.20", optional = true }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.13.4" }
