[package]
name = "stageleft_test_no_entry"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.release]
release = false

[dependencies]
stageleft = { path = "../stageleft", version = "^0.13.2" }

slotmap = "1.0.0"

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.13.2" }

[dev-dependencies]
insta = "1.39"
