[package]
name = "stageleft_tool"
publish = true
version = "0.11.0"
documentation = "https://docs.rs/stageleft_macro/"
description = "Helper macros for the stageleft crate"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
syn-inline-mod = "0.6.0"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["parsing", "extra-traits", "visit"] }
proc-macro2 = "1.0.74"
sha2 = "0.10.0"
prettyplease = "0.2.0"
toml_edit = { version = "0.22.24", features = ["parse"] }
proc-macro-crate = "3.3"

[dev-dependencies]
tempfile = "3.0"
